echo/service-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: example
  labels:
    app: example
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: example
